# clay-CXD

./: .gitignore  COLLABORATION_NOTE.md  DELETED_Formato de Ejemplos Canónicos (YAML) — CXD Classifier.md  FINAL_REVIEW_COMPLETE.md  LICENSE  MODELS_DUPLICATION_NOTE.md  README.md
clay/: .gitignore  CHANGELOG.md  CLAY_STANDARD.md  Clay MCP Server — Functional Documentation.md  Clay MCP Server.md  README.md  STATUS.md  clay_tools_manual.md  package.json  pyproject.toml  requirements.txt  server.js  setup_python_bridge.js
clay/clay/: Clay_Core_Modules.md  Core Internal Logic Modules of Clay.md  Módulos principales de lógica interna de Clay.md  __init__.py  assistant.py  bootstrap.py  memory.py  reflection.py  socratic.py  synthetic.py  tale_manager.py
clay/clay/providers/: __init__.py
clay/config/: cxd_config.yaml
clay/data/: base_memories.json  synthetic_memories.py
clay/python_bridge/: Clay Python Bridge Tools Documentation.md  clay_analyze_patterns.py  clay_bootstrap.py  clay_classify_cxd.py  clay_context_tale.py  clay_create_tale.py  clay_databases.py  clay_debug_python.py  clay_delete_memory_guided.py  clay_delete_tale.py  clay_direct_insert.py  clay_list_tales.py  clay_load_tale.py  clay_recall.py  clay_recall_cxd.py  clay_reflect.py  clay_remember.py  clay_remember_without_cxd.py  clay_search_tales.py  clay_single_transplant.py  clay_socratic.py  clay_status.py  clay_tale_stats.py  clay_think.py  clay_transplant.py  clay_update_memory_guided.py  clay_update_tale.py
clay/tales/claude/core/: clay_complete_introduction_2025-06-13.txt
clay/tests/: test_core.py  test_synthetic.py  testsReadme.md
cxd-classifier/: .gitignore  README.md  pyproject.toml  requirements.txt
cxd-classifier/config/: canonical_examples.yaml  canonical_examples_llm1.yaml  canonical_examples_original.yaml  canonical_examples_spanish.yaml  cxd_config.yaml
cxd-classifier/docs/: Arquitectura del Proyecto CXD Classifier.md  Canonical Examples Format (YAML) — CXD Classifier.md  DETAILED_ARCHITECTURE.md  Internal API Technical Reference — CXD Classifier.md  Referencia Técnica del API Interno — CXD Classifier.md
cxd-classifier/src/cxd_classifier/: __init__.py
cxd-classifier/src/cxd_classifier/advanced/: __init__.py
cxd-classifier/src/cxd_classifier/classifiers/: __init__.py  factory.py  lexical.py  meta.py  optimized_meta.py  optimized_semantic.py  semantic.py
cxd-classifier/src/cxd_classifier/core/: __init__.py  canonical.py  config.py  interfaces.py  types.py
cxd-classifier/src/cxd_classifier/providers/: __init__.py  embedding_models.py  examples.py  vector_store.py
cxd-classifier/src/cxd_classifier/testing/: __init__.py
cxd-classifier/src/cxd_classifier/utils/: __init__.py
cxd-classifier/tests/: conftest.py
cxd-classifier/tests/data/: golden_dataset.yaml
